--- a/vignettes/longevityTools_eQTL.html
+++ b/vignettes/longevityTools_eQTL.html
@@ -50,7 +50,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <div id="header">
 <h1 class="title"><em>longevityTools</em>: eQTL, eSNP and GWAS Analysis</h1>
 <h4 class="author"><em>Authors: Danjuma Quarless, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
-<h4 class="date"><em>Last update: 28 January, 2016</em></h4>
+<h4 class="date"><em>Last update: 31 January, 2016</em></h4>
 </div>
 <h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.2</span></h4>
 
@@ -197,7 +197,7 @@ result</code></pre>
 </div>
 <div id="funding" class="section level1">
 <h1><span class="header-section-number">7</span> Funding</h1>
-<p>This project is funded by NIH grant U24AG051129 awarded by the National Intitute of Aging (NIA).</p>
+<p>This project is funded by NIH grant U24AG051129 awarded by the National Intitute on Aging (NIA).</p>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
