--- a/vignettes/longevityTools_eDRUG.html
+++ b/vignettes/longevityTools_eDRUG.html
@@ -536,13 +536,13 @@ drugcmap2[[1]][1:20,]</code></pre>
 ## trifluoperazine   trifluoperazine   0.8624640      98   1
 ## etilefrine             etilefrine   0.8644660      40   1
 ## remoxipride           remoxipride   0.8655620      76   1
-## etoposide               etoposide   0.8690638       4   1
-## ethoxyquin             ethoxyquin   0.8695707      27   1
-## albendazole           albendazole   0.8699840      93   1
-## scoulerine             scoulerine   0.8705162       1   1
-## bromopride             bromopride   0.8709264      91   1
-## milrinone               milrinone   0.8712986      83   1
-## terfenadine           terfenadine   0.8718878      93   1</code></pre>
+## NA                           &lt;NA&gt;          NA      NA  NA
+## NA.1                         &lt;NA&gt;          NA      NA  NA
+## NA.2                         &lt;NA&gt;          NA      NA  NA
+## NA.3                         &lt;NA&gt;          NA      NA  NA
+## NA.4                         &lt;NA&gt;          NA      NA  NA
+## NA.5                         &lt;NA&gt;          NA      NA  NA
+## NA.6                         &lt;NA&gt;          NA      NA  NA</code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
 </div>
@@ -625,7 +625,7 @@ diseasecmap2[[1]][1:20,]</code></pre>
 ##  [1] DrugVsDisease_2.10.2    qvalue_2.2.2            cMap2data_1.6.0         DrugVsDiseasedata_1.6.0
 ##  [5] GEOquery_2.36.0         ArrayExpress_1.30.1     biomaRt_2.26.1          limma_3.26.5           
 ##  [9] affy_1.48.0             Biobase_2.30.0          BiocGenerics_0.16.1     ggplot2_2.0.0          
-## [13] longevityTools_1.0.2    BiocStyle_1.8.0        
+## [13] longevityTools_1.0.3    BiocStyle_1.8.0        
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] Rcpp_0.12.3                XVector_0.10.0             GenomeInfoDb_1.6.3        
