--- a/vignettes/longevityTools_eQTL.html
+++ b/vignettes/longevityTools_eQTL.html
@@ -52,7 +52,7 @@ document.addEventListener("DOMContentLoaded", function() {
 <h4 class="author"><em>Authors: Danjuma Quarless, Kuan-Fu Ding, Jamison McCorrison, Nik Schork, Dan Evans</em></h4>
 <h4 class="date"><em>Last update: 31 January, 2016</em></h4>
 </div>
-<h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.2</span></h4>
+<h4 class="package">Package version: <span style="font-weight: normal">longevityTools 1.0.3</span></h4>
 
 <h1>Contents</h1>
 <div id="TOC">
@@ -166,7 +166,7 @@ source(fctpath)</code></pre>
 </div>
 <div id="create-expected-directory-structure" class="section level2">
 <h2><span class="header-section-number">4.2</span> Create expected directory structure</h2>
-<p>The following creates the directory structure expected by this workflow. Input data will be stored in the <code>data</code> directory and results will written to the <code>results</code> directory. All paths are given relative to the present working directory of the user’s R session.</p>
+<p>The following creates the directory structure expected by this workflow. Input data will be stored in the <code>data</code> directory and results will be written to the <code>results</code> directory. All paths are given relative to the present working directory of the user’s R session.</p>
 <pre class="r"><code>dir.create(&quot;data&quot;); dir.create(&quot;results&quot;) </code></pre>
 <div align="right">
 <a href>Back to Table of Contents</a>
